# version_control

./: README.md
version_control/: Cargo.toml
version_control/.mini-git/: repository.json
version_control/.mini-git/backup/: Cargo.toml
version_control/.mini-git/backup/src/: commands.rs  main.rs
version_control/.mini-git/backup/test/: i_lied_there_is_no_test.md
version_control/.mini-git/remote/: repository.json
version_control/src/: commands.rs  main.rs  repository.rs  utils.rs
version_control/test/.mini-git/: repository.json
version_control/test/.mini-git/remote/: repository.json
