[package]
name = "version_control"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
clap = "2.33"  # Using clap v2 for compatibility with the existing code
